# petrichor4

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  export.py  fly.toml
asset_sources/levels/: l0.blend  l0.blend.glb
crates/petri_client/: Cargo.toml
crates/petri_client/assets/: petrichor4-intro.glb
crates/petri_client/src/: login_plugin.rs  main.rs  plugin.rs
crates/petri_server/: Cargo.toml
crates/petri_server/asset_src/: level.blend
crates/petri_server/benches/: colliders.rs
crates/petri_server/src/: blob_assets.rs  enemy.rs  main.rs  petri_obj.rs  plugin.rs
crates/petri_shared/: Cargo.toml
crates/petri_shared/src/: lib.rs  terrain.rs
