[workspace]
members = ["crates/*"]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.13", features=["serialize"] }
bevy_replicon = "0.23.0"
serde = "1"
anyhow = "1"

[profile.release]
# for profiling
debug = true
