[package]
name = "petri_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true, features=["jpeg"]}
bevy_replicon = {workspace = true}
anyhow = {workspace = true}
petri_shared = {path="../petri_shared"}
dns-lookup = {workspace = true}
