[package]
name = "petri_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
bevy_replicon = {workspace = true}
serde = {workspace = true}
petri_shared = {path="../petri_shared"}
anyhow = {workspace = true}
rand = "0.8"
bevy_rapier3d = { version = "0.25" , default-features = false, features = ["dim3"] }
thiserror = "1.0.57"
obj-rs = "0.7.1"
