[package]
name = "petri_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
bevy_replicon = {workspace = true}
itertools = "0.12.1"
num = "0.4.1"
serde = {workspace = true}
transvoxel = "1.1.0"
